third_party/move/move-compiler-v2/tests/reference-safety/function_ref_err.old.exp

Diagnostics:
error: cannot immutably borrow since mutable references exist
   ┌─ tests/reference-safety/function_ref_err.move:15:18
   │
14 │         let au = g_mut(&mut 3, &mut addr);
   │                  ------------------------ previous mutable call result
15 │         let du = f_mut(&h, &mut addr);
   │                  ^^^^^^^^^^^^^^^^^^^^ immutable borrow attempted here
16 │         *du > 0;
   │         --- requirement enforced here
17 │         *au > 1;
   │         --- conflicting reference `au` used here
